Init project and enable multiple Unity assets option

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/UnityCommon"]
 	path = Assets/UnityCommon
 	url = https://github.com/Big-Bro222/UnityCommon.git
+[submodule "Assets/GitSubModuleTest"]
+	path = Assets/GitSubModuleTest
+	url = https://github.com/Big-Bro222/GitSubModuleTest.git
